--- a/images/chieu-nhua-thai-binh-12/config.ini
+++ b/images/chieu-nhua-thai-binh-12/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-nhua-thai-binh-12.html
 lastopen = 2024-06-10 00:20:10
 
 [search]
-lastsearch = 2024-07-20 14:51:44
+lastsearch = 2024-07-20 19:59:06
 
 [shopee.vn]
-match = -17.4%%
-title = Chiếu nhựa thái bình gấp gọn (đủ mọi kích thươc)
-url = https://shopee.vn/Chiếu-nhựa-thái-bình-gấp-gọn-(đủ-mọi-kích-thươc)-i.266319381.9544957396
+match = 26.1%%
+title = chiếu nhựa gấp gọn Thái Bình tiện dụng
+url = https://shopee.vn/chiếu-nhựa-gấp-gọn-Thái-Bình-tiện-dụng-i.114438421.3932155248
 
 [www.facebook.com]
 match = 52.2%%
@@ -17,9 +17,9 @@ title = Chiếu Nhựa Thái Bình | Thanh Hóa
 url = https://www.facebook.com/chieunhuathaibinh/
 
 [www.sendo.vn]
-match = 0.0%%
-title = chiếu nhựa thái bình bền đẹp đủ cỡ - hot32068
-url = https://www.sendo.vn/chie-u-nhu-a-tha-i-bi-nh-ben-dep-du-co-95306137.html
+match = -34.8%%
+title = Chiếu Nhựa Chung Anh Thái Bình Giá Tốt, Mua Khỏi ...
+url = https://www.sendo.vn/chieu-nhua-chung-anh-thai-binh.htm
 
 [trangvangvietnam.com]
 match = -87.0%%
