--- a/images/chieu-lac-soc-18/config.ini
+++ b/images/chieu-lac-soc-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-18.html
 lastopen = 2024-06-06 16:53:55
 
 [search]
-lastsearch = 2024-07-20 20:30:22
+lastsearch = 2024-07-20 22:31:37
 
 [scholar.google.com]
 match = -43.8%%
@@ -222,9 +222,9 @@ title = Chuyển phát nhanh Phương Trang ...
 url = https://futaexpress.vn/chi-nhanh
 
 [baolongan.vn]
-match = -125.0%%
-title = Một ngày ở làng dệt chiếu lác Long Cang, Cần Đước
-url = https://baolongan.vn/mot-ngay-o-lang-det-chieu-lac-long-cang-can-duoc-a5230.html
+match = -31.2%%
+title = Giữ nghề dệt chiếu Long Cang
+url = https://baolongan.vn/giu-nghe-det-chieu-long-cang-a169502.html
 
 [baothuathienhue.vn]
 match = -200.0%%
@@ -377,14 +377,14 @@ title = CẦN XE KÉO CONT 01X20'DC từ CÁT LÁI GIANG NAM - ...
 url = https://m.facebook.com/groups/logisticsvietnam/posts/8429178217116624/
 
 [shopee.vn]
-match = -181.2%%
-title = Lắc tay nữ dạng bi khía mạ vàng 18K siêu sang,đeo ...
-url = https://shopee.vn/Lắc-tay-nữ-dạng-bi-khía-mạ-vàng-18K-siêu-sang-đeo-siêu-đẹp-giá-siêu-tốt-(vàng)-i.202262748.5215148232
+match = -75.0%%
+title = chiếu lác xuất khẩu 1m8 chiếu dầy cao cấp
+url = https://shopee.vn/chiếu-lác-xuất-khẩu-1m8-chiếu-dầy-cao-cấp-i.275355238.7156323941
 
 [chieulongdinh.com.vn]
-match = -87.5%%
-title = Chiếu cói sọc | 1m x 2m - Chiếu Hiệp Thành
-url = http://chieulongdinh.com.vn/vi/san-pham/9/chieu-coi-soc-1m-x-2m.html
+match = -6.2%%
+title = Chiếu cói sọc thẳng | 1m x 2m
+url = http://chieulongdinh.com.vn/vi/san-pham/21/chieu-coi-soc-thang-1m-x-2m.html
 
 [www.lazada.vn]
 match = -156.2%%
