--- a/images/chieu-truc-thai-den14/config.ini
+++ b/images/chieu-truc-thai-den14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-thai-den14.html
 lastopen = 2024-06-09 23:36:30
 
 [search]
-lastsearch = 2024-07-20 06:44:20
+lastsearch = 2024-07-20 22:31:05
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -27,9 +27,9 @@ title = Chieu truc thai lan hàng chính hãng, giao nhanh
 url = https://tiki.vn/search?q=chieu truc thai lan
 
 [chieutrelanlan.com]
-match = -114.3%%
-title = Chiếu trúc thương hiệu Việt Nam, chất lượng tốt - Bảo hành ...
-url = https://chieutrelanlan.com/
+match = 9.5%%
+title = Chiếu trúc cao cấp Thái Lan 1m6x200cm
+url = https://chieutrelanlan.com/chieu-truc-cao-cap-thai-lan-1m6x2m-87.html
 
 [www.youtube.com]
 match = -138.1%%
