--- a/images/chieu-cay-dai-loan-vien-da15/config.ini
+++ b/images/chieu-cay-dai-loan-vien-da15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-dai-loan-vien-da15.html
 lastopen = 2024-06-09 23:43:35
 
 [search]
-lastsearch = 2024-07-20 22:33:03
+lastsearch = 2024-07-20 23:22:20
 
 [www.diepxuan.com]
 match = 65.4%%
@@ -12,9 +12,9 @@ title = Chiếu cây Đài Loan 140x190
 url = https://www.diepxuan.com/chieu-cay-dai-loan-140x190.html
 
 [www.vinmec.com]
-match = 0.0%%
-title = Chiếu đèn vàng da 15 phút có hiệu quả không?
-url = https://www.vinmec.com/vie/bai-viet/chieu-den-vang-da-15-phut-co-hieu-qua-khong-vi
+match = -10.7%%
+title = Hướng dẫn chiếu đèn điều trị vàng da sơ sinh
+url = https://www.vinmec.com/vi/tin-tuc/thong-tin-suc-khoe/nhi/huong-dan-chieu-den-dieu-tri-vang-da-so-sinh/
 
 [www.hotdeal.vn]
 match = -32.1%%
@@ -27,9 +27,9 @@ title = Lê Mật Đài Loan Bên E Giao Khách l Đếm Không Hết Quả ...
 url = https://www.youtube.com/watch?v=jnvflW7R2LY
 
 [m.facebook.com]
-match = 25.0%%
-title = CHỢ CƯ DÂN ECOPARK (Kênh nội bộ)
-url = https://m.facebook.com/groups/1786488038270373/posts/3637942186458273/
+match = -32.1%%
+title = TUYỂN DỤNG KỸ THUẬT VIÊN SPA | ☘️UP Skinlab cần ...
+url = https://m.facebook.com/groups/1529017447196745/posts/7585938074837955/
 
 [www.dkn.tv]
 match = -21.4%%
@@ -37,9 +37,9 @@ title = Chiêm ngưỡng 20 viên đá rực rỡ đẹp nhất thế giới
 url = https://www.dkn.tv/van-hoa/nghe-thuat/21-loai-da-ruc-ro-gap-100-lan-kim-cuong.html
 
 [www.impehcm.org.vn]
-match = -17.9%%
-title = Bệnh sán dây bò (Taenia saginata) - Viện Sốt rét
-url = https://www.impehcm.org.vn/noi-dung/kham-benh-giun-san/benh-san-day-bo-taenia-saginata.html
+match = -71.4%%
+title = Giun đầu gai (Phần 1: Đại cương; Dịch tễ học; Đặc điểm hình ...
+url = https://www.impehcm.org.vn/noi-dung/kham-benh-giun-san/giun-dau-gai-phan-1-dai-cuong-dich-te-hoc-dac-diem-hinh-thai-hoc-va-chu-ky-phat-trien.html
 
 [www.thuocbietduoc.com.vn]
 match = -50.0%%
@@ -99,12 +99,12 @@ url = https://medlatec.vn/tu-dien-benh-ly/san-day-sbfou
 [www.merckmillipore.com]
 match = 27.3%%
 title = PHIẾU AN TOÀN HÓA CHẤT
-url = https://www.merckmillipore.com/Web-IN-Site/en_US/-/EUR/ShowDocument-File?ProductSKU=MDA_CHEM-102067&DocumentType=MSD&DocumentId=102067_SDS_VN_VI.PDF&DocumentUID=9332876&Language=VI&Country=VN&Origin=null
+url = https://www.merckmillipore.com/Web-ES-Site/es_ES/-/EUR/ShowDocument-File?ProductSKU=MDA_CHEM-104354&DocumentType=MSD&DocumentId=104354_SDS_VN_VI.PDF&DocumentUID=47184070&Language=VI&Country=VN&Origin=PDP
 
 [www.facebook.com]
-match = -46.4%%
-title = Thẩm Mỹ Viện | Có ai tuyển nhân viên spa nuôi ăn ở không ạ
-url = https://www.facebook.com/groups/973966372773445/posts/có-ai-tuyển-nhân-viên-spa-nuôi-ăn-ở-không-ạ-e-biết-triệt-lông-gội-đầu-massage-va/2733132316856833/
+match = -21.4%%
+title = BÌNH_TÂN CẦN TUYỂN 02 #KTV NẶN MỤN CỨNG ĐI ...
+url = https://www.facebook.com/groups/1529017447196745/posts/bình_tân-cần-tuyển-02-ktv-nặn-mụn-cứng-đi-làm-ngayquyền-lợitổng-lương-7-10triệu-/7570745196357243/
 
 [www.favri.org.vn]
 match = -10.7%%
