--- a/images/chieu-lac-gam-16/config.ini
+++ b/images/chieu-lac-gam-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-gam-16.html
 lastopen = 2024-06-09 23:10:09
 
 [search]
-lastsearch = 2024-07-20 21:50:30
+lastsearch = 2024-07-20 23:15:23
 
 [www.diepxuan.com]
 match = 22.2%%
@@ -17,9 +17,9 @@ title = Chiếu lác thiên nhiên : 1m6 .1m8
 url = https://shopee.vn/Chiếu-lác-thiên-nhiên-1m6-.1m8-i.154866392.2623269681
 
 [www.youtube.com]
-match = -231.2%%
-title = Thời sự sáng 20/7: Tổng bí thư Nguyễn Phú Trọng - Nhà lãnh ...
-url = https://www.youtube.com/watch?v=94lvutN9mUA
+match = -206.2%%
+title = [Review Phim] Thằng Cha BẢO VỆ QUÈN Bị Xã Hội Đen Coi ...
+url = https://www.youtube.com/watch?v=oQaC1-lu7m0
 
 [hawater.com.vn]
 match = -75.0%%
@@ -62,9 +62,9 @@ title = Top 16 game Idle trên điện thoại Android, iOS hay nhất
 url = https://www.thegioididong.com/game-app/top-16-game-idle-tren-dien-thoai-android-ios-hay-nhat-khong-the-bo-1334353
 
 [vnexpress.net]
-match = -75.0%%
-title = Trấn Thành khởi động phim Tết 2025
-url = https://vnexpress.net/tran-thanh-khoi-dong-phim-tet-2025-4772123.html
+match = -168.8%%
+title = Hai cựu công an bị phạt hơn 15 năm tù vì bán ma túy
+url = https://vnexpress.net/hai-cuu-cong-an-bi-phat-hon-15-nam-tu-vi-ban-ma-tuy-4771115.html
 
 [laodong.vn]
 match = -187.5%%
@@ -545,4 +545,9 @@ url = http://caobangtv.vn/tin-tuc-n75200/dang-vien-nhan-dan-que-huong-dong-anh-t
 match = -193.8%%
 title = Nadal tiến vào bán kết Nordea Open sau trận đấu 4 tiếng
 url = https://langsontv.vn/news/488/72906/nadal-tien-vao-ban-ket-nordea-open-sau-tran-dau-4-tieng
+
+[nongnghiep.vn]
+match = -168.8%%
+title = Bàn giao cá thể trăn gấm 22kg cho lực lượng kiểm lâm
+url = https://nongnghiep.vn/ban-giao-ca-the-tran-gam-22kg-cho-luc-luong-kiem-lam-d393565.html
 
