--- a/images/chieu-nhua-thai-binh-12/config.ini
+++ b/images/chieu-nhua-thai-binh-12/config.ini
@@ -4,22 +4,22 @@ url = https://www.diepxuan.com/chieu-nhua-thai-binh-12.html
 lastopen = 2024-06-10 00:20:10
 
 [search]
-lastsearch = 2024-07-20 22:47:35
+lastsearch = 2024-07-20 23:17:28
 
 [shopee.vn]
-match = -17.4%%
-title = Chiếu nhựa thái bình gấp gọn (đủ mọi kích thươc)
-url = https://shopee.vn/Chiếu-nhựa-thái-bình-gấp-gọn-(đủ-mọi-kích-thươc)-i.266319381.9544957396
+match = 0.0%%
+title = Chiếu nhựa (quê hương thái bình)kt 1m6 và 1m8
+url = https://shopee.vn/Chiếu-nhựa-(quê-hương-thái-bình)kt-1m6-và-1m8-i.143185988.9645236178
 
 [www.facebook.com]
-match = -30.4%%
-title = Xưởng sản xuất chiếu nhựa Dũng Tiến - Thái Bình
-url = https://www.facebook.com/p/Xưởng-sản-xuất-chiếu-nhựa-Dũng-Tiến-Thái-Bình-100076145417043/?locale=vi_VN
+match = 85.0%%
+title = Chiếu nhựa Thái Bình
+url = https://www.facebook.com/p/Chiếu-nhựa-Thái-Bình-100083672378137/
 
 [www.sendo.vn]
-match = 0.0%%
-title = chiếu nhựa thái bình bền đẹp đủ cỡ - hot32068
-url = https://www.sendo.vn/chie-u-nhu-a-tha-i-bi-nh-ben-dep-du-co-95306137.html
+match = -34.8%%
+title = Chiếu Nhựa Chung Anh Thái Bình Giá Tốt, Mua Khỏi ...
+url = https://www.sendo.vn/chieu-nhua-chung-anh-thai-binh.htm
 
 [trangvangvietnam.com]
 match = -87.0%%
@@ -62,9 +62,9 @@ title = Chiếu Tre Việt Phổ Mến Thái Bình Cao Cấp - Chính Hãng ...
 url = https://demhong.vn/chieu-tre-viet-pho-men/
 
 [www.diepxuan.com]
-match = 4.3%%
-title = Chiếu gấp Thái Bình 180x300 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-gap-thai-binh-180x300.html
+match = 26.1%%
+title = Chiếu nhựa Thái Bình 120x190 - Điệp Xuân
+url = https://www.diepxuan.com/chieu-nhua-thai-binh-120x190.html
 
 [h5.lazada.vn]
 match = -17.4%%
@@ -90,4 +90,14 @@ url = https://www.lamchame.com/forum/threads/man-tuyn-10-10_chieu-coi-chieu-nhua
 match = -47.8%%
 title = Van 1 Chiều Nhựa PVC-UPVC-CPVC-PVDF - KITZ Seals
 url = https://kitz.com.vn/van-1-chieu-nhua
+
+[tongkhocautruc.com]
+match = -56.5%%
+title = Cầu trục dầm đôi 5 tấn nâng hạ khuôn nhựa Thái Bình
+url = https://tongkhocautruc.com/cau-truc-dam-doi-5-tan-nang-ha-khuon-nhua-thai-binh/
+
+[baothaibinh.com.vn]
+match = 13.0%%
+title = Chiếu làng Hới trong thời đại 4.0
+url = https://baothaibinh.com.vn/video/2513/chieu-lang-hoi-trong-thoi-dai-4-0
 
