--- a/images/nem-di-a-mon-9f-2m-22-re/config.ini
+++ b/images/nem-di-a-mon-9f-2m-22-re/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-di-a-mon-9f-2m-22-re.html
 lastopen = 2024-06-10 00:56:34
 
 [search]
-lastsearch = 2024-07-20 18:25:44
+lastsearch = 2024-07-20 23:13:55
 
 [www.tiktok.com]
 match = 8.3%%
@@ -32,9 +32,9 @@ title = Toyota 22re engine??? Is it a good engine?
 url = https://www.race-dezert.com/forum/threads/toyota-22re-engine-is-it-a-good-engine.77620/
 
 [www.yotatech.com]
-match = -20.8%%
-title = 22r in place of 22re - YotaTech Forums
-url = https://www.yotatech.com/forums/f116/22r-place-22re-241918/
+match = 5.3%%
+title = no NE signal at ECU
+url = https://www.yotatech.com/forums/f116/no-ne-signal-ecu-231658/
 
 [www.diepxuan.com]
 match = -66.7%%
@@ -52,9 +52,9 @@ title = Toyota 22RE Engine Replacement (Part 2)
 url = https://www.youtube.com/watch?v=hZRwijhMTH0
 
 [books.google.com]
-match = -79.2%%
-title = Jo. Baptistae de Luca venusini, S. R. E. presbyteri ...
-url = https://books.google.com/books?id=lEdJAQAAMAAJ&pg=PA117&lpg=PA117&dq=nem+di+a+mon+9f+2m+22+re&source=bl&ots=nKV97vcuyi&sig=ACfU3U0vachtGhkWNxll3AOAWz3z0_5isg&hl=en&sa=X&ved=2ahUKEwjIrZeVwbWHAxUpFFkFHU8nDzUQ6AF6BAgcEAM
+match = -116.7%%
+title = The Popular Encyclopedia; Or "Conversations Lexicon": Being ...
+url = https://books.google.com/books?id=c4Tqkb5ylrIC&pg=RA2-PA640-IA3&lpg=RA2-PA640-IA3&dq=nem+di+a+mon+9f+2m+22+re&source=bl&ots=dnYxYGpwjA&sig=ACfU3U3CnP26tTC8gVAW36cdvrsz8J6ggQ&hl=en&sa=X&ved=2ahUKEwjSxpjKgbaHAxV5PjQIHSSGDHEQ6AF6BAgZEAM
 
 [www.kvaser.cn]
 match = 9.1%%
