--- a/images/tham-xop-18/config.ini
+++ b/images/tham-xop-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-xop-18.html
 lastopen = 2024-06-07 00:22:33
 
 [search]
-lastsearch = 2024-07-20 21:28:21
+lastsearch = 2024-07-20 23:19:02
 
 [www.sendo.vn]
 match = 0.0%%
@@ -17,9 +17,9 @@ title = Thảm xốp ghép nỉ Âu Lạc 30*30*18 tấm
 url = http://thamachau.vn/tham-xop-ghep-ni-au-lac-30-30-18-tam
 
 [shopee.vn]
-match = -127.3%%
-title = THẢM TRẢI SÀN NỈ DỆT CAO CẤP 18 TẤM
-url = https://shopee.vn/THẢM-TRẢI-SÀN-NỈ-DỆT-CAO-CẤP-18-TẤM-THẢM-XỐP-GHÉP-MIẾNG-TƯỜNG-LÂM-SANG-TRỌNG-PHÙ-HỢP-VỚI-MỌI-KHÔNG-GIAN-NỘI-THẤT-i.157222824.3315202784
+match = -336.4%%
+title = Thảm xốp trải sàn - Giá Tốt, Miễn Phí Vận Chuyển, Đủ Loại
+url = https://shopee.vn/list/thảm xốp/trải sàn
 
 [thamtretho.com]
 match = -363.6%%
