--- a/images/ga-ni-long-18/config.ini
+++ b/images/ga-ni-long-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-ni-long-18.html
 lastopen = 2024-06-09 23:39:01
 
 [search]
-lastsearch = 2024-07-20 22:49:46
+lastsearch = 2024-07-20 23:46:00
 
 [www.zillow.com]
 match = -69.2%%
@@ -17,9 +17,9 @@ title = Off to college? 4 legal forms for your 18-year-old - Blog
 url = https://blog.massmutual.com/planning/legal-forms-for-18-year-olds
 
 [www.imdb.com]
-match = 0.0%%
-title = Silenced (2011)
-url = https://www.imdb.com/title/tt2070649/
+match = -92.3%%
+title = Ginny & Georgia (TV Series 2021
+url = https://www.imdb.com/title/tt10813940/
 
 [aging.georgia.gov]
 match = -46.2%%
