--- a/images/tui-warmdream-160x200x09/config.ini
+++ b/images/tui-warmdream-160x200x09/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tui-warmdream-160x200x09.html
 lastopen = 2024-06-17 10:41:37
 
 [search]
-lastsearch = 2024-07-20 23:36:18
+lastsearch = 2024-07-20 23:44:02
 
 [www.diepxuan.com]
 match = -16.7%%
@@ -69,7 +69,7 @@ url = https://www.wanderthewest.com/threads/insulated-thermal-pack.22462/
 [www.amazon.com]
 match = -50.0%%
 title = Amazon.com: Customer Questions & Answers
-url = https://www.amazon.com/ask/questions/asin/B0002YTLS6
+url = https://www.amazon.com/ask/questions/Tx1A2ZU0C5ULQJ7/?
 
 [ultralightandcomfortable.com]
 match = 0.0%%
