--- a/images/chan-3-k-tuyet-sin-thai-lan/config.ini
+++ b/images/chan-3-k-tuyet-sin-thai-lan/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chan-3-k-tuyet-sin-thai-lan.html
 lastopen = 2024-06-09 23:46:49
 
 [search]
-lastsearch = 2024-07-20 23:32:58
+lastsearch = 2024-07-21 00:37:12
 
 [shopee.vn]
-match = -14.8%%
-title = chăn lông 3kg giá tốt Tháng 7, 2024 | Mua ngay
-url = https://shopee.vn/search?keyword=chăn lông 3kg  
+match = 7.4%%
+title = CHĂN LÔNG TUYẾT NHUNG CAO CẤP Thái Lan Loại 4kg
+url = https://shopee.vn/CHĂN-LÔNG-TUYẾT-NHUNG-CAO-CẤP-Thái-Lan-Loại-4kg-i.126028938.4857799045
 
 [h5.lazada.vn]
 match = -11.1%%
@@ -22,9 +22,9 @@ title = Chăn Lông tuyết KQ 3 Lớp - Chăn 5kg hàng cao cấp chất ...
 url = https://www.lazada.vn/products/chan-long-tuyet-kq-3-lop-chan-5kg-hang-cao-cap-chat-luong-caocuc-ky-am-cho-ngay-ret-dai-han-i2044231389.html
 
 [tiki.vn]
-match = 11.1%%
-title = Chăn nhung tuyết hàng chính hãng, giao nhanh
-url = https://tiki.vn/search?q=chăn nhung tuyết
+match = -3.7%%
+title = Chăn tuyết nhung hàng chính hãng, giao nhanh
+url = https://tiki.vn/search?q=chăn tuyết nhung
 
 [betuti.vn]
 match = 48.1%%
