--- a/images/chan-cuu-loai-2/config.ini
+++ b/images/chan-cuu-loai-2/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-cuu-loai-2.html
 lastopen = 2024-06-09 23:05:55
 
 [search]
-lastsearch = 2024-07-20 23:39:34
+lastsearch = 2024-07-21 00:29:24
 
 [tiki.vn]
 match = -133.3%%
@@ -37,9 +37,9 @@ title = Nhận biết chăn lông cừu hữu cơ và chăn tổng hợp - Lasan
 url = https://lasantevn.com/nhan-biet-chan-long-cuu-huu-co-va-chan-tong-hop/
 
 [shopee.vn]
-match = -86.7%%
-title = chăn cừu giá tốt Tháng 7, 2024 | Mua ngay
-url = https://shopee.vn/search?keyword=chăn cừu
+match = -173.3%%
+title = chăn lông cừu ultimate giá tốt Tháng 7, 2024 | Mua ngay
+url = https://shopee.vn/search?keyword=chăn lông cừu ultimate
 
 [changadep88.vn]
 match = -86.7%%
@@ -72,9 +72,9 @@ title = Chăn cứu hỏa, chăn chiên chữa cháy chất lượng #1 có ...
 url = https://thietbicuuhoa.vn/chan-cuu-hoa/
 
 [yuki.edu.vn]
-match = -200.0%%
-title = Chăn lông cừu Queen màu Đỏ ruby ( Đỏ Đô ) Nanara Nhật Bản
-url = https://yuki.edu.vn/sanpham/chan-long-cuu-queen-mau-do-ruby/
+match = -126.7%%
+title = chăn lông cừu yuki japan thu đông màu vàng đậm
+url = https://yuki.edu.vn/sanpham/chan-long-cuu-yuki-japan-thu-dong-mau-vang-dam/
 
 [cloudlux.com.vn]
 match = -46.7%%
