--- a/images/chieu-cay-dai-loan-vien-da14/config.ini
+++ b/images/chieu-cay-dai-loan-vien-da14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-dai-loan-vien-da14.html
 lastopen = 2024-06-09 22:14:06
 
 [search]
-lastsearch = 2024-07-20 19:25:16
+lastsearch = 2024-07-21 00:36:28
 
 [www.diepxuan.com]
 match = 65.4%%
@@ -177,9 +177,9 @@ title = Men uống ENTER PROBI - Men vi sinh chứa 4 tỷ lợi khuẩn ...
 url = https://vicopharonli.com/men-vi-sinh-enterprobi
 
 [www.tiktok.com]
-match = -50.0%%
-title = Cla250 14年
-url = https://www.tiktok.com/discover/cla250-14年
+match = -71.4%%
+title = Bà nào thích bôi kcn không màu không bết dính, không nặng ...
+url = https://www.tiktok.com/@xuanh.box/video/7366289357722225938
 
 [dropbiz.vn]
 match = -9.1%%
