--- a/images/chieu-truc-cong-ty-16-20/config.ini
+++ b/images/chieu-truc-cong-ty-16-20/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-truc-cong-ty-16-20.html
 lastopen = 2024-06-09 23:50:30
 
 [search]
-lastsearch = 2024-07-21 00:11:48
+lastsearch = 2024-07-21 00:32:40
 
 [chieutrelanlan.com]
-match = -41.7%%
-title = Chiếu trúc mắt nhỏ không viền màu đen 160x190cm (1m6)
-url = https://chieutrelanlan.com/chieu-truc-mat-nho-loai-khong-vien-mau-den-160x190cm-27.html
+match = -79.2%%
+title = Chiếu trúc thương hiệu Việt Nam, chất lượng tốt - Bảo hành ...
+url = https://chieutrelanlan.com/
 
 [kyoryo.vn]
 match = -54.2%%
@@ -57,9 +57,9 @@ title = Thế Giới Chiếu Trúc
 url = https://www.facebook.com/thegioichieutruc/
 
 [chieutrucsaigon.com]
-match = -14.3%%
-title = TIN TRONG NƯỚC
-url = https://chieutrucsaigon.com/tin-tuc/tin-trong-nuoc/
+match = 8.3%%
+title = BÁN CHIẾU TRÚC MẮT NHỎ 1M6 HƯƠNG TRÚC
+url = https://chieutrucsaigon.com/tin-tuc/tin-tuc-moi/ban-chieu-truc-mat-nho-1m6-huong-truc-70.html
 
 [www.xskthcm.com]
 match = -83.3%%
