--- a/images/ruot-goi-ke-korea/config.ini
+++ b/images/ruot-goi-ke-korea/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-goi-ke-korea.html
 lastopen = 2024-06-10 00:58:26
 
 [search]
-lastsearch = 2024-07-20 22:51:07
+lastsearch = 2024-07-21 00:33:22
 
 [www.diepxuan.com]
 match = -64.7%%
@@ -87,9 +87,9 @@ title = Mua Ruột gối ép hơi Korea kích thước 40x60cm
 url = https://tiki.vn/ruot-goi-ep-hoi-korea-kich-thuoc-40x60cm-p46348341.html?spid=117894377
 
 [www.sieuthinem.vn]
-match = -35.3%%
-title = RUỘT GỐI TRUYỀN THỐNG EVERON STANDARD
-url = https://www.sieuthinem.vn/ruot-goi-truyen-thong-everon-standard.html
+match = -182.4%%
+title = Gối cao su, gối bông, gối tơ tằm giá tốt tại sieuthinem.vn
+url = https://www.sieuthinem.vn/goi.html
 
 [www.sendo.vn]
 match = -123.5%%
@@ -102,8 +102,8 @@ title = Gối ôm bông - Nệm Việt Chất
 url = https://nemvietchat.com/goi-om-bong-dvhe3234
 
 [www.youtube.com]
-match = -164.7%%
-title = 🇰🇷KOREA VLOG | Escaping Seoul & A Weekend In Jeollabuk ...
+match = -100.0%%
+title = Escaping Seoul & A Weekend In Jeollabuk-do
 url = https://www.youtube.com/watch?v=HAz6FHL4Hdw
 
 [www.snbshop.vn]
@@ -135,4 +135,9 @@ url = https://apps.dtic.mil/sti/trecms/pdf/AD1143833.pdf
 match = -164.7%%
 title = GOMBAWI, Seoul - Gangnam-gu - Restaurant Reviews ...
 url = https://www.tripadvisor.com/Restaurant_Review-g294197-d4085151-Reviews-Gombawi-Seoul.html
+
+[www.rome2rio.com]
+match = 0.0%%
+title = 
+url = https://www.rome2rio.com/s/India/Seoul
 
